# Rust-Jasmine

./: .gitignore  CHAT_PROTOCOL_RUST_IMPLEMENTATION_PLAN.md  CLAUDE.md  FLUTTER_RUST_BRIDGE_V2_接入说明.md  FRB_RUST_SKELETON_AND_SUBMODULE_FLOW.md  JASMINE_AGENT_RUST_RESTRUCTURE_PLAN.md  README.md  README_ZH_CN.md  RUST_PROVIDER_INTEGRATION_PLAN.md  analysis_options.yaml  flutter_rust_bridge.yaml  pubspec.yaml
.github/: FUNDING.yml
android/: gradle.properties  settings.gradle.kts
docs/: html-rendering-sample.md
ios/: .gitignore
lib/: main.dart
rust/: Cargo.toml
rust-lib/: Cargo.toml
rust-lib/mcp-server-rust/: Cargo.toml
rust-lib/model-provider-rust/: Cargo.toml
rust-lib/model-provider-rust/src/: frb_generated.rs  lib.rs
rust-lib/model-provider-rust/src/api/: mcp_api.rs  mod.rs  provider_api.rs
rust-lib/model-provider-rust/src/mcp_server/: mcp_api.rs  mod.rs
rust-lib/model-provider-rust/src/mcp_server/models/: common.rs  content.rs  resource.rs  sampling.rs  tool.rs
rust-lib/model-provider-rust/src/mcp_server/protocol/: constants.rs
rust-lib/model-provider-rust/src/mcp_server/server/: config.rs  manager.rs  normalizer.rs
rust-lib/model-provider-rust/src/mcp_server/transport/: types.rs
rust-lib/model-provider-rust/src/models/: mod.rs  model_info.rs  provider_config.rs
rust-lib/model-provider-rust/src/providers/: claude.rs  openai_compat.rs
rust-lib/model-provider-rust/src/utils/: mod.rs  model_inference.rs
rust_builder/: pubspec.yaml
test/: chat_api_custom_image_marker_test.dart  chat_api_extra_headers_test.dart  (+25 more)
web/: index.html  (+1 more)
(+233 files in other folders)
